--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 
 <br/>
 <strong id="uatTagName"> </strong>
+
+<script>
+
+generateUATTagName();
+
+function generateUATTagName(){
+  uatTagName =  new Date().getFullYear() + "-" + (new Date().getMonth() + 1) + "-" + new Date().getUTCDate() + "-" + new Date().getHours() + new Date().getMinutes();
+
+  document.getElementById("uatTagName").innerText = uatTagName;
+}
+</script>
