--- a/uat.html
+++ b/uat.html
@@ -52,9 +52,11 @@
         '-' +
         (new Date().getMonth() + 1) +
         '-' +
-        new Date().getUTCDate() +
+        new Date().getDate() +
         '-' +
-        new Date().getHours() +
+        (new Date().getHours() < 10
+          ? '0' + new Date().getHours()
+          : new Date().getHours()) +
         (new Date().getMinutes() < 10
           ? '0' + new Date().getMinutes()
           : new Date().getMinutes());
